# SummarizedExperiment

./: .buildinfo  .coveragerc  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  authors.html  changelog.html  contributing.html  environment.yml  extend_se.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tutorial.html
.github/workflows/: pypi-publish.yml  pypi-test.yml
_modules/: index.html
_modules/summarizedexperiment/: BaseSE.html  RangeSummarizedExperiment.html  RangedSummarizedExperiment.html  SummarizedExperiment.html  SummarrizedExperiment.html  base.html  interface.html  rse.html  se.html  type_checks.html
_sources/: changelog.md.txt  index.md.txt  readme.md.txt  tutorial.md.txt
_sources/api/: modules.rst.txt  summarizedexperiment.dispatchers.rst.txt  summarizedexperiment.rst.txt  summarizedexperiment.utils.rst.txt
_static/: documentation_options.js
api/: modules.html  summarizedexperiment.dispatchers.html  summarizedexperiment.html  summarizedexperiment.utils.html
docs/: conf.py  extend_se.md  index.md  tutorial.md
src/summarizedexperiment/: BaseSE.py  RangeSummarizedExperiment.py  RangedSummarizedExperiment.py  SummarizedExperiment.py  __init__.py  (+15 more)
tests/: conftest.py  test_RSE.py  test_RSE_methods.py  test_SE.py  test_SE_backed.py  test_SE_combine_cols.py  test_SE_combine_methods.py  test_SE_combine_rows.py  test_SE_methods.py  test_SE_subset copy.py  test_SE_subset.py  test_SE_utils.py
(+25 files in other folders)
